--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
 
-        <h1>Welcome to Lab</h1>
+        <h1>Welcome to Lab 6</h1>
 
         <p>My first Website Deploy</p>
     </body>
